Copy sent to Rick

--- a/related_work.tex
+++ b/related_work.tex
@@ -8,16 +8,17 @@ related to this thesis is covered simultaneously.
 
 \section{Convolutional networks}
 
-A convolutional network (ConvNet) is a feed-forward computational graph of processing nodes, commonly used in analyzing visual imagery. It is a class of artificial neural networks (ANNs), which are computational systems inspired by biological neural networks. ConvNets perform tasks (\eg, object classification) by processing an input, $\mathbf{X} \in \mathbb{R}^{H_x \times W_x \times C_x}$, in a feed-forward manner via a series of linear and non-linear transformations and producing an output, $\mathbf{Y} \in \mathbb{R}^{H_y \times W_y \times C_y}$, relevant to the task (such as the class of an object). Here, $H_\ast \times W_\ast$ represents the spatial dimensions and $C_\ast$ represents the number of channels (\ie, the ``depth'' of the input). For example, a $3$-channel colour image input with $256 \times 256$ spatial locations is represented as $\mathbf{X} \in \mathbb{R}^{256 \times 256 \times 3}$, where each spatial location contains three pixel intensities, corresponding to the amount of intensity of the colours Red, Green, and Blue (RGB), respectively. Each non-linear transformation acts as a point of demarcation in the network known as a \emph{layer}. ConvNets typically consist of multiple layers, each containing a collection of nodes sometimes called \emph{neurons}. At each spatial-channel location of the input to a layer, a neuron computes local non-linear transformations, \eg, $\sigma(\mathbf{x}) = \max{(0, \phi(\mathbf{x}))}$ (known as the \emph{rectified linear unit} or ReLU \cite{nair2010rectified}). At a single location of the input, $\mathbf{x} \equiv (x, y, z)$, the non-linear transformation performed by this neuron produces an output called an \emph{activation} or \emph{feature}, $\sigma(\mathbf{x}) \in \mathbb{R}$. The set of activations produced by a neuron at every location of the input is known as an \emph{activation map} or \emph{feature map}, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$. At the $l$-th layer of the network and for each location $\mathbf{x}$ of the input map, the input to each neuron is the weighted linear combination of activations from neighbouring neurons at the previous layer, $l-1$:
+A convolutional network (ConvNet) is a high-capacity feed-forward computational graph of processing nodes for approximating non-linear functions, with an inductive bias in the form of localized mappings and shared weights. It is commonly used in analyzing visual imagery and is a class of artificial neural networks (ANNs), which are computational systems inspired by biological neural networks. ConvNets perform tasks (\eg, object classification) by processing an input, $\mathbf{X} \in \mathbb{R}^{H_x \times W_x \times C_x}$, in a feed-forward manner via a series of linear and non-linear transformations and producing an output, $\mathbf{Y} \in \mathbb{R}^{H_y \times W_y \times C_y}$, relevant to the task (such as the class of an object). Here, $H_\ast \times W_\ast$ represents the spatial dimensions and $C_\ast$ represents the number of channels (\ie, the ``depth'' of the input). For example, a $3$-channel colour image input with $256 \times 256$ spatial locations is represented as $\mathbf{X} \in \mathbb{R}^{256 \times 256 \times 3}$, where each spatial location contains three pixel intensities, corresponding to the amount of intensity of the colours Red, Green, and Blue (RGB), respectively. Each non-linear transformation acts as a point of demarcation in the network known as a \emph{layer}. ConvNets typically consist of multiple layers, each containing a collection of nodes sometimes called \emph{neurons}. At each spatial-channel location of the input to a layer, a neuron computes local non-linear transformations, \eg, $\sigma(\mathbf{x}) = \max{(0, \phi(\mathbf{x}))}$ (known as the \emph{rectified linear unit} or ReLU \cite{nair2010rectified}). At a single location of the input, $\mathbf{x} \equiv (x, y, z)$, the non-linear transformation performed by this neuron produces an output called a \emph{feature activation}, $\sigma(\mathbf{x}) \in \mathbb{R}$. The set of activations produced by a neuron at every location of the input is known as an \emph{activation} or \emph{feature map}, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$. At the $l$-th layer of the network and for each location $\mathbf{x}$ of the input map, the input to each neuron is the weighted linear combination of activations from local, neighbouring neurons at the previous layer, $l-1$:
 \begin{equation}
 	\begin{aligned}
 		\phi^l(\mathbf{x}) &= \left(\mathbf{w}^l * \sigma^{l-1}(\mathbf{x})\right) + b^l\\
 		&= \left(\sum_{(i, j, k) \in \Omega} \mathbf{w}^l(i, j, k) \sigma^{l-1}(x - i, y - j, z - k)\right) + b^l\ ,
 	\end{aligned}
 \end{equation}
-where $\mathbf{w}^l$ are the \emph{weights} (or \emph{filter}) of the neuron applied to the input $\sigma^{l-1}(\mathbf{x})$, $\Omega$ is a spatial-channel neighbourhood centered about $\mathbf{x}$, $b^l$ is an offset term known as the \emph{bias}, and $\ast$ represents the \emph{convolution} (or \emph{filtering}) operator. Colloquially, the term ``convolution'' is often used to describe the combined process of convolving over an input and subsequently computing its activation. Convolution is typically done in a sliding window fashion across the entire input. At the base of the ConvNet, inputs are typically images while inputs at intermediate layers are activation maps (\eg, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$). 
+where $\mathbf{w}^l$ are the \emph{weights} (or \emph{filter}) applied to the input $\sigma^{l-1}(\mathbf{x})$, $\Omega$ is a spatial-channel neighbourhood centered about $\mathbf{x}$, $b^l$ is an offset term known as the \emph{bias}, and $\ast$ represents the \emph{convolution} (or \emph{filtering}) operator. Colloquially, the term ``convolution'' is often used to describe the combined process of convolving over an input and subsequently computing its activation. Convolutions are performed at each location of the input, operating on a localized area of influence called its \emph{receptive field}. Unique to ConvNets, the weights associated with a convolution are shared across the entire input. Specifically, when convolving over an input, instead of using a unique filter for each location, the same filter is reused---this is called \emph{weight sharing}. The idea is that if a filter is important for capturing a feature (\eg, edge, corner, face, etc.) at a particular location, then it is assumed that the filter is important at other locations as well since the same feature may appear elsewhere.
+At the base of the ConvNet, inputs are typically images while inputs at intermediate layers are activation maps (\eg, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$). 
 
-ConvNets ``learn'' to perform tasks through an iterative process called \emph{training}, which involves optimizing their weights based on an objective over training data (\eg, input images with corresponding expected outputs). At each iteration, an input is fed through the network to produce an output which is subsequently evaluated against the expected, \ie, ``true'', output for the given input. This evaluation is known as the \emph{loss function} and represents the network's performance on the task. Implicitly, it also represents the objective the network must achieve, \eg, minimizing classification error. Starting from the loss, the network adjusts its weights and biases at each layer via the gradient of the loss with respect to the weights and biases at that layer. After a suitable amount of training iterations, this \emph{gradient descent} process is terminated.
+ConvNets ``learn'' to perform tasks through an iterative process called \emph{training}, which involves optimizing their weights based on an objective over training data (\eg, input images with corresponding expected outputs). At each iteration, an input is fed through the network to produce an output which is subsequently evaluated against the expected, \ie, groundtruth, output for the given input. This evaluation is known as the \emph{loss function} and represents the network's performance on the task. Implicitly, it also represents the objective the network must achieve, \eg, minimizing classification error. Starting from the loss, the network adjusts its weights and biases at each layer via the gradient of the loss with respect to the weights and biases at that layer. After a suitable amount of training iterations, this \emph{gradient descent} process is terminated.
 
 \section{Parametric texture synthesis}
 
@@ -29,7 +30,7 @@ synthesize a texture by sampling pixels of a given source texture
 \cite{efros1999,kwatra2003graphcut,schodl2000,wei2000}, and 
 statistical parametric models that aim to synthesize a texture by sampling
 from a parameterized model of the source texture.
-As the proposed approach is an instance of a parametric model, this thesis 
+As the proposed approach is an instance of a parametric model, this section 
 will focus on these parametric approaches.
 
 The statistical characterization of visual textures was introduced
@@ -67,7 +68,7 @@ $\mathbf{G}^l \in \mathbb{R}^{N_l \times N_l}$, whose entries are given by:
 	G_{ij}^l = \frac{1}{N_l M_l} \sum_{k=1}^{M_l} A_{ik}^l A_{jk}^l\ ,
 \end{equation}
 where $A_{ik}^l$ denotes the activation of feature $i$ at
-location $k$ in layer $l$ on the target texture. Note that the Gram matrix assumes spatial invariance of the activation statistics.
+location $k$ in layer $l$ on the target texture.
 Given a synthesized texture as input, similarly, let its row-vectorized activation maps
 be $\hat{\mathbf{A}}^{l} \in \mathbb{R}^{N_l\times M_l}$ and its normalized
 activation map correlations be the Gram matrix, $\hat{\mathbf{G}}^l \in \mathbb{R}^{N_l \times N_l}$, whose entries are given by:
@@ -87,10 +88,10 @@ layers \emph{conv1\_1}, \emph{pool1}, \emph{pool2}, \emph{pool3}, and \emph{pool
 Before synthesizing a texture, an initial forward pass through the ConvNet is
 performed with the target texture as input. The target texture's Gram matrices
 across various layers in the network are computed and stored to be used in the final objective for
-the synthesis process (Eq.\ \ref{eq:tex_loss}). Then the synthesized texture is initialized with Independent and Identically Distributed (IID)
+the synthesis process, Eq.\ \ref{eq:tex_loss}. Then the synthesized texture is initialized with Independent and Identically Distributed (IID)
 Gaussian noise. The final
-objective (Eq.\ \ref{eq:tex_loss}) is minimized with respect to the synthesized texture. With each
-iteration of the optimization process, the synthesized texture is updated to appear increasingly
+objective, Eq.\ \ref{eq:tex_loss}, is minimized with respect to the synthesized texture. With each
+iteration of the optimization process, the pixel values of the synthesized texture are updated to appear increasingly
 perceptually similar to the target texture. An overview of this process is presented in Fig.\ \ref{fig:vgg_texture_synthesis}.
 \clearpage
 \input{fig_vgg_texture_synthesis}
@@ -101,7 +102,9 @@ perceptually similar to the target texture. An overview of this process is prese
 Before explaining the Gram matrix as a suitable texture metric, it is necessary to first understand the mathematics behind it. The Gram matrix, $\mathbf{G} \in \mathbb{R}^{n \times n}$, of a set of $m$-dimensional vectors, $v_1, \dots , v_n \in \mathbb{R}^m$, is the symmetric matrix of inner products, whose entries are given by $G_{ij} = \langle v_i, v_j \rangle$. Essentially, the Gram matrix is a covariance matrix describing which of its input vectors are correlated with each other. In the case of Gatys \etal's \cite{gatys2015} texture synthesis with a ConvNet, the set of vectors used to compute the Gram matrix are row-vectorized activation maps (Fig.\ \ref{fig:gram_matrix}).
 \input{fig_gram_matrix}
 
-In texture synthesis, the Gram matrix measures the amount that co-located features tend to activate together. By computing Gram matrices across several layers, a stationary, multi-scale representation of the input image in terms of its texture information is achieved.
+The hierarchical feature representations learned by ConvNets have been shown to be powerful for difficult visual perceptive tasks such as object recognition \cite{krizhevsky2012,simonyan2014very}, significantly outperforming previous models that have relied on handcrafted approaches. Significantly, Movshon and Simoncelli \cite{movshon2014} have suggested that given the texture-like features that can be captured in the intermediate stages of these ConvNets, images synthesized from these representations may prove useful as stimuli in perceptual or physiological investigations. This suggests that ConvNets may be a suitable basis for modelling textures, and consequently, texture synthesis.
+
+In texture synthesis, the Gram matrix computed on activations measures the amount that co-located features tend to activate together. It transforms the spatially-varying feature space into a stationary, spatially-invariant one. Since textures exhibit stationary statistics (\ie, the visual content is spatially homogeneous), by computing Gram matrices across several layers, a stationary, multi-scale representation of the input image in terms of its texture information is achieved.
 
 \subsection{Image style transfer}
 
@@ -116,15 +119,15 @@ that enforced the synthesized texture to match the semantic content of the given
 \end{equation}
 where $L_{style}$ and $L_{content}$ are the number of VGG-19 layers used when computing Gram matrices and activation maps, respectively. Gram matrices are computed on the same layers as before, and activation maps are computed on layer \emph{conv4\_2}.
 
-To briefly review, the Gram matrix of activation maps conveys a notion of texture, or ``style'', describing which features tend to activate together. Although the style of the style image is preserved, the global arrangement of its features are not. By including the objective of matching the features of the content image, however, the global arrangement of semantic image content from the content image is preserved. This results in a synthesized image that contains the content of the content image and the style of the style image.
+To briefly review, the Gram matrix of activation maps conveys a notion of texture, or ``style'', describing which features tend to activate together. Although the style of the style image is preserved, the global arrangement of its features are not. By including the objective of matching the features of the content image, however, the global arrangement of semantic image content from the content image is preserved. This results in a synthesized image that contains the content of the content image and the style of the style image. The idea of transferring style from one image to another serves as a loose inspiration for the novel dynamics style transfer enabled by the proposed two-stream model. Although with dynamics style transfer, content is not preserved, as it is only a transfer of texture dynamics encompassed by a texture synthesis process.
 
 \section{Dynamic texture synthesis}
 
 Dynamic textures extend from static textures with an additional temporal dimension. The stationarity of spatial statistics of static textures also applies to the temporal domain of dynamic textures.
 
-Unlike static texture synthesis, dynamic texture synthesis has not been as deeply explored. Somewhat related to dynamic texture synthesis, Ruder \etal \cite{ruder2016} extended the image style transfer model to video by using
+Unlike static texture synthesis, dynamic texture synthesis has not been as deeply explored. Loosely related---although tangential to dynamic texture synthesis and the proposed dynamics style transfer---Ruder \etal \cite{ruder2016} extended the image style transfer model of Gatys \etal \cite{gatys2016image} to video by using 
 optical flow to enforce temporal consistency of the
-resulting imagery. Although their model produced a video output, their core approach focused on an analysis of static texture on a per-frame basis. This is not to be confused with dynamic texture synthesis, which requires an analysis of \emph{dynamic} textures across space \emph{and time}.
+resulting imagery. Although their model produced a video output, their core approach focused on an analysis of static style on a per-frame basis. This is tangential to the proposed approach since dynamic textures require an analysis across space \emph{and time}.
 
 Variants of linear autoregressive models have been studied
 \cite{szummer1996,doretto2003,wang2003,fitzgibbon2001} that jointly model the appearance and
@@ -136,8 +139,8 @@ generative model where each dynamic texture is modelled as a random
 field defined by multiscale, spatiotemporal ConvNet filter responses
 and dynamic textures are realized by sampling the model.
 Unlike the proposed approach, which assumes pre-trained fixed networks,
-Xie \etal's \cite{xie2017synthesizing} approach requires their ConvNet weights to be trained using the input texture prior to synthesis. The manner in which they model dynamic textures appears to limit synthesis to a reconstruction, not an extrapolation, of the original sequence, limiting the generalizability (\eg, synthesis of textures beyond the spatiotemporal extent of the input) of their approach.
-A recent preprint from Funke \etal \cite{funke2017} described preliminary 
+Xie \etal's \cite{xie2017synthesizing} approach requires their ConvNet weights to be trained using the input texture prior to synthesis. The manner in which they model dynamic textures appears to limit synthesis to a reconstruction, not an extrapolation, of the original sequence, limiting the generalizability of their approach, \eg, synthesizing textures beyond the spatiotemporal extent of the input.
+A recent unpublished work by Funke \etal \cite{funke2017} described preliminary 
 results extending the framework of Gatys \etal \cite{gatys2015} 
 to model and  synthesize dynamic textures by computing a Gram 
 matrix of filter activations over a small spatiotemporal window.
@@ -160,24 +163,24 @@ At one extreme, no commitment to an abstraction is made, the raw pixelwise inten
 
 \subsection{Optical flow}
 
-At the other extreme of Fig.\ \ref{fig:dynamics_representations}, a two-dimensional (2D) vector field is used to represent the dynamics of the input temporal imagery. This vector field is known as \emph{optical flow}. It is used to represent the apparent motion of image pixels between two consecutive frames that is caused by the movement of objects or the camera. Each vector in the 2D vector field is a displacement vector consisting of a horizontal and vertical component, describing the movement of pixels from one frame to the next. Figure \ref{fig:optical_flow} provides a useful visualization of optical flow.
+At the other extreme of Fig.\ \ref{fig:dynamics_representations}, a two-dimensional (2D) vector field is used to represent the dynamics of the input temporal imagery. This vector field is known as \emph{optical flow}. It is used to represent the apparent motion of image pixels between two consecutive frames that is caused by the movement of objects or the camera. Each vector in the 2D vector field represents a displacement consisting of a horizontal and vertical component, describing the movement of pixels from one frame to the next. Figure \ref{fig:optical_flow} provides a visualization of optical flow.
 \input{fig_optical_flow}
 The recovery of optical flow from temporal imagery has long been studied in computer vision. Traditionally, it has been addressed by handcrafted approaches \eg, \cite{horn1981,lucas1981,revaud2015epicflow}. Recently, ConvNet approaches have been demonstrated as viable alternatives \cite{dosovitskiy2015,ilg2017,ranjan2017,yu2016}.
 
-A limitation of optical flow is its reliance on a single coherent movement for each pixel and its underlying assumption on brightness constancy, which is difficult to justify for the spectrum of dynamics one encounters in the real world. Examples of dynamics that optical flow would fail to capture include flickering, semi-transparent motion, and stochastic dynamics. These are some of the dynamics typically exhibited by dynamic textures. Therefore, optical flow is not an optimal measure for representing the spectrum of dynamics in dynamic textures.
+A limitation of optical flow is its reliance on a single coherent movement for each pixel and its underlying assumption on brightness constancy, which is difficult to justify for the spectrum of dynamics one encounters in the real world. Examples of dynamics that optical flow would fail to capture include flickering, semi-transparent motion, and stochastic dynamics. These are some of the dynamics typically exhibited by dynamic textures. Therefore, optical flow is not an suitable substrate for representing the spectrum of dynamics in dynamic textures.
 
 \subsection{Marginalized spacetime oriented energies}
 \label{sec:msoe}
 
 At the midpoint between the two extremes lies the representation of dynamics that aims to capture a distribution of measurements of spacetime orientations in the input temporal imagery.
-Unlike flow-based analyses which focus on the apparent motion (\ie, translation) present in the data, measurements of spacetime orientations take a geometric and generalized approach in capturing \emph{spacetime structures}: oriented structures in the spatiotemporal domain that manifest themselves as motion or non-motion (\eg, flickering, stochastic dynamics, etc.).
+Unlike flow-based analyses which focus on the apparent motion (\ie, translation) present in the data, measurements of spacetime orientations take a geometric and generalized approach in capturing \emph{spacetime structures}: oriented structures in the spatiotemporal domain that manifest themselves as motion or non-motion, \eg, flickering, stochastic dynamics, etc.
 
-Previous works \cite{adelson1985spatiotemporal,fahle1981,heeger1988,simoncelli1998,watson1983,nishimoto2011,derpanis2012spacetime} have shown that the velocity of image content (\ie, motion) is interpreted as a 3D oriented structure in the $x$-$y$-$t$ spatiotemporal domain. Furthermore, in the frequency domain, they showed that the signal energy of these oriented structures lie on a plane through the origin where the slant of the plane is defined by the velocity of the image content.
+Previous works \cite{adelson1985spatiotemporal,fahle1981,heeger1988,simoncelli1998,watson1983,nishimoto2011,derpanis2012spacetime} have shown that the velocity of image content (\ie, motion) can be interpreted as a 3D oriented structure in the $x$-$y$-$t$ spatiotemporal domain. Furthermore, in the frequency domain, the signal energy of these oriented structures lie on a plane through the origin where the slant of the plane is defined by the velocity of the image content.
 For example, in the case where a spacetime structure is defined by the image velocity $(u, v)^\top$, the unit normal of the plane is given by $\hat{\mathbf{n}}=(u, v, 1)^\top / ||(u, v, 1)^\top||$.
 Hence, energy models of visual motion, like those presented in these works, are described as ``oriented energy'' or ``motion energy'' models, and they attempt to identify this orientation-plane (and hence the pattern's velocity) via a set of image filtering operations. Specifically, given an input image sequence, these models consist of an alternating sequence of linear and non-linear operations that yield a distributed representation (\ie,  implicitly coded) of pixelwise
 optical flow. These models have been motivated and studied in a variety of contexts, including computer vision, visual neuroscience, and visual psychology
 
-Whereas motion indicates a single, dominant orientation in the spatiotemporal and frequency domains, non-motion can indicate an unconstrained, underconstrained, multi-dominant, heterogeneous, or isotropic orientation. For example, an unconstrained orientation corresponds to structure-less imagery (\eg, image of a clear sky) in the spatiotemporal domain and a structure-less energy response in the frequency domain; and a multi-dominant orientation corresponds to multiple, super-imposed spacetime structures in the spatiotemporal domain (\eg, waterfall over a stationary background) and multiple, super-imposed oriented planes in the frequency domain. These, along with the other orientations, are visualized in Fig.\ \ref{fig:spacetime_structures}.
+Whereas motion indicates a single, dominant orientation in the spatiotemporal and frequency domains, non-motion can indicate an unconstrained, underconstrained, multi-dominant, heterogeneous, or isotropic orientation. For example, an unconstrained orientation corresponds to structure-less imagery (\eg, image of a clear sky) in the spatiotemporal domain and point energy response in the origin in the frequency domain; and a multi-dominant orientation corresponds to multiple, super-imposed spacetime structures in the spatiotemporal domain (\eg, waterfall over a stationary background) and multiple, super-imposed oriented planes in the frequency domain. These, along with the other orientations, are visualized in Fig.\ \ref{fig:spacetime_structures}.
 \clearpage
 \input{fig_spacetime_structures}
 \clearpage
@@ -186,7 +189,7 @@ This thesis adopts the Marginalized Spacetime Oriented Energy (MSOE) approach of
 visual patterns (\eg, dynamic textures) can serve as a basis for describing the temporal
 variation of an image sequence. They successfully applied their model for the task of dynamic texture recognition; here it is used for the task of dynamic texture synthesis. Significantly, a completely analytically-defined
 oriented energy ConvNet model provides the current state-of-the-art
-for the related task of dynamic texture recognition \cite{hadji2017}. The proposed two-stream architecture adopts the MSOE model by encoding it as a ConvNet that serves as the representation of observed dynamics of input dynamic textures---the dynamics stream. The same computational steps are used, however, the handcrafted filters of the MSOE model are not used and are learned instead. The construction of the ConvNet is discussed in the next chapter and the MSOE model is reviewed here.
+for the related task of dynamic texture recognition \cite{hadji2017}. The proposed two-stream architecture adopts the MSOE model by encoding it as a ConvNet that serves as the representation of observed dynamics of input dynamic textures---the dynamics stream. The same computational steps are used, however, the handcrafted filters of the MSOE model are not used and are learned instead so that they are better tuned to deal with the noise distributions encountered in natural imagery. The construction of the ConvNet is discussed in the next chapter and the MSOE model is reviewed here.
 
 Given input temporal imagery, $\mathbf{I} \in \mathbb{R}^{T \times H \times W}$ (time $\times$ height $\times$ width), a bank of oriented 3D
 filters, \eg, Gaussian third derivative filters $G_3 \in \mathbb{R}^{T \times H \times W}$, which are sensitive to a range of
@@ -203,7 +206,7 @@ structure:
 \begin{equation}
 	\bar{E}_{\hat{\theta}} = \sum_{(x, y, t) \in \Omega}{{E_{\hat{\theta}}(x, y, t)}^2}\ .
 \end{equation}
-At this point, each oriented energy measurement includes measurement of spatial orientation. This means that spatial image structures will affect the responses of the bank of oriented filters, making them dependent on spatial appearance. This is unwanted as this interference can occur at an otherwise coherent dynamic region, \eg, a surface with varying spatial appearance exhibiting a single, dominant motion. Thus, a description consisting purely of pattern dynamics is sought.
+At this point, each oriented energy measurement includes measurement of spatial orientation. This means that spatial image structures will affect the responses of the bank of oriented filters, making them dependent on spatial appearance. This is unwanted as this can occur at an otherwise coherent dynamic region, \eg, a surface with varying spatial appearance exhibiting a single, dominant motion. Thus, a description consisting purely of pattern dynamics is sought.
 To remove this difficulty, the spatial orientation component of each filter is discounted via ``marginalization''. Specifically, filter responses consistent with the same temporal orientation (not necessarily the same spatial orientation), $\hat{\theta}_i$, are summed:
 \begin{equation}
 	E_{\hat{\mathbf{n}}} = \sum_{i = 1}^{N}{E_{\hat{\theta}_i}}\ ,
