--- a/thesis.bib
+++ b/thesis.bib
@@ -32,6 +32,15 @@
   year = {2010}
 }
 
+@inproceedings{movshon2014,
+  title = {Representation of naturalistic image structure in the primate visual cortex},
+  author = {Anthony J. Movshon and Simoncelli, Eero P.},
+  booktitle = {Cold Spring Harbor Symposia on Quantitative Biology},
+  volume = {79},
+  pages = {115--122},
+  year = {2014}
+}
+
 @inproceedings{kingma2017,
   author = {Diederik P. Kingma and Jimmy Ba},
   title = {Adam: A Method for Stochastic Optimization},
@@ -679,6 +688,14 @@ pages    = {265--283}
   booktitle = ICML,
   pages = {807--814},
   year = {2010}
+}
+
+@inproceedings{krizhevsky2012,
+  title = {Imagenet classification with deep convolutional neural networks},
+  author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.},
+  booktitle = NIPS,
+  pages = {1097--1105},
+  year = {2012}
 }
 
 @book{derpanis2010role,
